tests/mocks/success/http-server-with-websockets/app/sockets/http-websocket/index.js
'use strict';
module.exports = class Index {

  static onRequest(socket) {
    socket.emit('message', 'success');
  }

};
