tests/mocks/fail/initializer/app/initializers/initializer.js
'use strict';
module.exports = class Initializer {

};
